Force max-content width and min-width per column to prevent data squashing

--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ th {
     text-transform: uppercase;
     white-space: nowrap;
     text-align: left;
+    min-width: 140px;
 }
 
 td {
@@ -233,7 +234,7 @@ td {
 
 table {
     width: 100%;
-    min-width: 1000px;
+    min-width: max-content;
     border-collapse: collapse;
     text-align: left;
 }
